# primebot_1

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: infrared_view.rviz  view_bot.rviz
description/: gazebo_control.xacro  infrared.xacro  robot.urdf.xacro  robot_core.xacro
launch/: launch_sim.launch.py  rsp.launch.py
models/: model.config  model.sdf
primebot_1/: line_follower_node.py
worlds/: line_track.world  line_world.world
